--- a/expansion.html
+++ b/expansion.html
@@ -1,15 +1,15 @@
-<!DOCTYPE>
+<!DOCTYPE=html>
 
 <html>
   <header>
-    <script type='text/javascript'  src='js\bootstrap.js'></script>
-    <script type='text/javascript'  src='js\jquery.js'></script>
-    <script type='text/javascript' src='main.js'></script>
-    <script type='text/javascript' src='js\expansion.js'></script>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel='stylesheet' href='css\bootstrap.css' />
+    <!--<script type='text/javascript'  src='../../js/bootstrap.js'></script>-->
+    <script type='text/javascript'  src='jquery.js'></script>
+    <!--<script type='text/javascript' src='main.js'></script>-->
+    <script type='text/javascript' src='expansion.js'></script>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
+    <!--<link rel='stylesheet' href='css\bootstrap.css' />-->
     <!-- <link rel='stylesheet' href='css\main.css' /> -->
-    <link rel='stylesheet' href='css\expansion.css' />
+    <link rel='stylesheet' href='expansion.css' />
     <title>Expansion</title>
   </header>
 
